<resources>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="portuguese">Portuguese</string>
    <string name="indonesian">Indonesian</string>
    <string name="german">German</string>

    <string name="app_name">Magnifier, Magnifying Glass</string>
    <string name="app_name2">Magnifier,\nMagnifying Glass</string>
    <string name="version">Version: </string>
    <string name="about_us">About Us</string>

    <string name="try_this_app">Try this awesome MAGNIFIER app:</string>
    <string name="permission_content"> requires permission to use the (device’s camera and folder)</string>

    <string name="this_action_can_contain_ads">This action may contain advertising</string>
    <string name="language">Language</string>
    <string name="permission">Permission</string>
    <string name="next">Next</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="tutorial1">Enlarged up to 10x to see things more clearly</string>
    <string name="tutorial2">Supports lighting to easily read books and newspapers in low light</string>
    <string name="tutorial3">Fast and accurate QR code scanner</string>
    <string name="allow_access">Allow access</string>
    <string name="storage">Storage</string>
    <string name="camera">Camera</string>
    <string name="tv_continue">Continue</string>
    <string name="qr_scan">QR Scan</string>
    <string name="light">Light</string>
    <string name="flash_is_not_available_currently">Flash is not available currently</string>
    <string name="flip">Flip</string>
    <string name="header_warning_permission">Warning permission</string>
    <string name="desc_warning_permission_dialog">You must allow all Permission to use this app with full feature.</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="let_start_now">Let\'s Start Now</string>
    <string name="delete_photos">Delete photos</string>
    <string name="delete_confirm_question">Do you really want to delete photos from this list?</string>
    <string name="create_a_name">Create a name</string>
    <string name="create_contruct">Create a name for the photo so it can be easily searched in the photo list.</string>
    <string name="qr_instruc_1">Place QR code inside area</string>
    <string name="qr_instruc_2">Scanning will start automatically</string>
    <string name="do_you_like_the_app">Do you like the app?</string>
    <string name="oh_no">Oh, no!</string>
    <string name="we_love_you_to0">We love you too!</string>
    <string name="let_us_know_your_experience">Let us know your experience</string>
    <string name="please_give_us_some_feedback">Please give us some feedback</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback</string>
    <string name="thanks_for_voting_us">Thanks for voting us!</string>
    <string name="please_select_your_voting">Please select your voting!</string>
    <string name="you_have_already_vote">You\'ve already voted!</string>
    <string name="link_privacy">https://www.freeprivacypolicy.com/live/30c47c45-af86-4d91-b1b9-2ad8f3e8068f</string>
    <string name="link_share_app">https://www.freeprivacypolicy.com/live/30c47c45-af86-4d91-b1b9-2ad8f3e8068f</string>
    <string name="magnifying_glass">Magnifying Glass</string>
    <string name="magnifier">Magnifier</string>
    <string name="my_photo">My Photo</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_name">Enter name</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="go">Go</string>
    <string name="scan_results">Scan Results</string>
    <string name="scan_result_here">Scan result here</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="cant_share">It is not possible to share more than 2 images.</string>
    <string name="invalid_image_name">Invalid image name!</string>
    <string name="is_already_taken">is already taken!</string>
    <string name="no_photo">No photo.</string>

</resources>