<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:paddingHorizontal="23dp"
        android:paddingVertical="13dp">

        <TextView
            android:id="@+id/btnLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/language"
            android:textColor="#646464"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnRateUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLang"
            android:fontFamily="@font/roboto_regular"

            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/rate_us"
            android:textColor="#646464"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRateUs"

            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/share_app"
            android:textColor="#646464"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnShareApp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/privacy_policy"
            android:textColor="#646464"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>