<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_create_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dialog"
        android:padding="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/create_a_name"
            android:textColor="#646464"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17sp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start"
            android:text="@string/create_contruct"
            android:textColor="#888888"
            android:textSize="14dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp">

            <EditText
                android:id="@+id/edtImageName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/enter_name"
                android:lines="1"
                android:paddingStart="10dp"
                android:paddingEnd="40dp"
                android:textColor="#676767"
                android:textColorHint="#B5B5B5" />
            <ImageView
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnClearText"
                android:src="@drawable/icon_clear_text"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btnDecline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_color_app_circle"
                android:backgroundTint="#EFEFEF"
                android:gravity="center"
                android:paddingVertical="13sp"
                android:text="@string/cancel"
                android:textColor="#9A9A9A"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnCreateNameAgree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_color_app_circle"
                android:backgroundTint="#43A1FC"
                android:gravity="center"
                android:paddingVertical="13sp"
                android:clickable="false"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>