<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_rate_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dialog"
        android:padding="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_rate_default"
            android:id="@+id/imgRateIcon"/>
        <TextView
            android:id="@+id/txtRating"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/do_you_like_the_app"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_200sdp"
            android:id="@+id/txtRating2"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/let_us_know_your_experience"
            android:textColor="#888888"
            android:textSize="14dp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_marginVertical="@dimen/_10sdp"
            android:numStars="5"
            android:rating="0"
            android:isIndicator="false"
            android:layout_gravity="center"
            android:stepSize="1"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:progressDrawable="@drawable/custom_rating_bar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/btnVote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_color_app_circle"
                android:backgroundTint="#43A1FC"
                android:gravity="center"
                android:paddingVertical="13sp"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/btnClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="13sp"
                android:text="@string/exit"
                android:textColor="#A9B0BE"
                android:textSize="14sp"
                android:textStyle="bold" />



        </LinearLayout>

    </LinearLayout>
</RelativeLayout>