<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    tools:context=".ui.MyPhotoActivity">

    <include
        android:id="@+id/toolbarMyPhoto"
        layout="@layout/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/btnSelectAll"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/select_all"
        android:textColor="@color/magnifier"
        android:textSize="@dimen/_13sdp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMyPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarMyPhoto"
        android:layout_marginBottom="@dimen/_60sdp"
        android:padding="@dimen/_10sdp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtNoPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarMyPhoto"
        android:layout_marginBottom="@dimen/_60sdp"
        android:fontFamily="@font/roboto_regular"
        android:visibility="gone"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/no_photo"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <LinearLayout
        android:id="@+id/layoutPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/include"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        android:visibility="gone"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_color_app_circle"
            android:backgroundTint="#EFEFEF"
            android:gravity="center"
            android:paddingVertical="13sp"
            android:text="@string/delete"
            android:textColor="#9A9A9A"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_color_app_circle"
            android:backgroundTint="#43A1FC"
            android:gravity="center"
            android:paddingVertical="13sp"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/layout_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>