<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/permission"
            android:textColor="@color/black_1b"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/txtGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/go"
            android:textColor="@color/magnifier"
            android:textSize="@dimen/_16sdp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/ic_permission" />

        <TextView
            android:id="@+id/txtPermissonContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/permission_content"
            android:textSize="14sp" />

        <TableRow
            android:id="@+id/tableNotif"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:background="@drawable/bg_item_per"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_7sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/storage"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/swPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/switch_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_item_per"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_7sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/camera"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/swPer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/switch_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>
    </LinearLayout>
</LinearLayout>