<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:id="@+id/layoutToolbarMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="@drawable/bg_toolbar_main"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingBottom="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/welcome_back"
                android:textColor="#858585"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/magnifying_glass"
                android:textColor="#424242"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAboutUs"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_toLeftOf="@id/cardviewSettings"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/icon_logo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="@dimen/_15sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/btnSettings"
                    android:layout_width="@dimen/_29sdp"
                    android:layout_height="@dimen/_29sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/icon_settings" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutToolbarMain"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/layoutMagnifier"
            android:layout_width="0dp"
            android:layout_height="@dimen/_226sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_allblue_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/robotoflex_regular"
                android:text="@string/magnifier"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/icon_magnifier" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_textbutton_white"
                    android:drawableEnd="@drawable/icon_next"
                    android:drawablePadding="7dp"
                    android:fontFamily="@font/robotoflex_regular"
                    android:maxLines="2"
                    android:paddingVertical="9dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="7dp"
                    android:text="@string/let_start_now"
                    android:textColor="@color/magnifier"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_226sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutQrscan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:background="@drawable/bg_button_allblue_20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/robotoflex_regular"
                    android:text="@string/qr_scan"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_qr" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutMyPhoto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:background="@drawable/bg_button_allblue_20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/robotoflex_regular"
                    android:text="@string/my_photo"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_myphoto" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/native_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/ads_native_shimer" />
    </FrameLayout>


</RelativeLayout>